Closed Bug 149171 Opened 22 years ago Closed 22 years ago

Can not enter gb18030 extension A characters by using NeiMa unicode IME

Categories

(Core :: Internationalization, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: amyy, Assigned: tetsuroy)

References

Details

(Keywords: inputmethod, intl, Whiteboard: [adt3])

Attachments

(1 file)

Build: 06-03 branch build on WinXP-SC Steps: 1. Launch browser and go to any where that can enable IME. 2. Select one of SimpChinese IME - NeiMa. 3. Select the input method to "Unicode". 4. Type a unicode value of gb18030 extension A characters, e.g. 3402. Result: No character appears. Note: This is a regression from N6.2x, it might cause the fixed for NeiMa part in bug 141513.
I assume people who using this NeiMa IME should use this unicode method more for some un-usual chinese characters, in another word this is an important feature for NeiMa -> nsbeta1.
Keywords: nsbeta1
Summary: Can not enter gb18030 extension A characters by using NeiMa unicode IME → Can not enter gb18030 extension A characters by using NeiMa unicode IME
WM_IME_CHAR doesn't send Extension A nor Extension B unicode code points. MS Windows CP-936 can't support them. Thus we are getting '?'...... ftang, ylong and I agreed to remove the special code handling for NeiMa which will allow to enter Extension A&B. We leave the MS PinYing as is. Accepting and patch to follow.
Status: NEW → ASSIGNED
Shanjian: can you review?
Comment on attachment 86343 [details] [diff] [review] Removing NeiMa from Over-the-Spot code r=shanjian
Attachment #86343 - Flags: review+
Keywords: intl
it is bad that we cannot input han ideograph extension A block. It will make us look bad at China. the fix look reasonable by removing one item from the hack.
Blocks: 141008
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt3]
Roy and Frank, I'd like to give you some suggestion about this bug. I am not sure what is the risk for fixing this bug, but if you are thinking it has some risk more than 50%, I suggest don't checkin this one until you make more confidence, e.g. 90%. The 1st reason is that we recently have IME more regressions than before, and IME functions become unstable now. The 2nd reason is the it is not a high priority bug, MeiMa IME is not a major or popular one within SC IMEs, it is a additional IME only for some special usages, the most people doesn't know and use this IME, and also user still have some work around to enter those characters, e.g. copy and paste using Notepad. I am thinking it will be the real worst if this fix causing some other critical bugs.
brendan: can you super review?
*** Bug 149731 has been marked as a duplicate of this bug. ***
Comment on attachment 86343 [details] [diff] [review] Removing NeiMa from Over-the-Spot code It looks like I sr='d the patch that regressed this, so I'm not adding any domain-specific value here. rs=brendan@mozilla.org /be
Attachment #86343 - Flags: superreview+
Target Milestone: --- → mozilla1.0.1
[adt3] because it is not used for main stream input method.
checked into the trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Verified with 2002061204 trunk on SC WinXP.
Comment on attachment 86343 [details] [diff] [review] Removing NeiMa from Over-the-Spot code Please land this on the 1.0.1 branch. Once there, remove the "mozilla1.0.1+" keyword, and add the "fixed1.0.1"
Attachment #86343 - Flags: approval+
Adding adt1.0.1+ on behalf of the adt for checkin to the 1.0 branch. Please get drivers approval before checking in. When you check this into the branch, please change the mozilla1.0.1+ keyword to fixed1.0.1
Keywords: adt1.0.1adt1.0.1+
checked into the 1.0 branch
Blocks: 146292
No longer blocks: 141008
Verified on branch 2002062408.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: