Bug 149171 and 146844 IME input processing Only impact Simplified Chinese Windows. /r=shanjian, /sr=brendan